--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<html>
+
+  <head> 
+    <!-- Ezoic Code -->
+      <script src="//www.ezojs.com/basicads.js?d=sivanaveen143.github.io" type="text/javascript"></script>
+     <!-- Ezoic Code -->
+  </head>
+
+
 <h1> hii </h1>
+
+</html>
